No more accordion scrollbars. The grids in the vocabulary and codec configuration pages are now twice as tall and the column widths adjust so horizontal scrolling isn't needed. System configuration page is redone, with a SplitContainer, and no initial scrollbar, although one will appear if the tree gets tall enough. ID prefixes are gone from some places where they were redundant. Reformatted some tables to avoid horizontal scrollbars. Miscellaneous refactoring.

--- a/platform/ui/styles/default.css
+++ b/platform/ui/styles/default.css
@@ -669,12 +669,12 @@ This is a duplicate of #reactor_config_content for now.
 
 .codec_grid {
 	overflow: hidden;
-	height: 180px;
+	height: 360px;
 }
 
 .vocab_grid {
 	overflow: hidden;
-	height: 180px;
+	height: 360px;
 }
 
 #grid {
